laborations/lab1/testsuite/bad/bad024.cc
struct bar {
	int baz;
        foo;
} ;
